--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -12,14 +11,23 @@
         android:background="@drawable/gradiente" />
 
     <TextView
-        android:id="@+id/titulo"
+        android:id="@+id/titulo_splash"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/mis_tareas"
-        android:textColor="@android:color/white"
-        android:textSize="40sp"
-        android:textAlignment="center"
         android:layout_marginTop="30sp"
-        />
+        android:text="@string/mis_tareas"
+        android:textAlignment="center"
+        android:textColor="@android:color/white"
+        android:textSize="60sp" />
+
+    <ImageView
+        android:id="@+id/imagen_splash"
+        android:layout_width="match_parent"
+        android:layout_height="112dp"
+        android:layout_below="@id/titulo_splash"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="250dp"
+        android:contentDescription="@string/icono"
+        android:src="@mipmap/icono_app" />
 
 </FrameLayout>
