--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -29,7 +29,7 @@
         android:layout_height="112dp"
         android:layout_below="@id/titulo_login"
         android:layout_marginTop="6dp"
-        android:src="@mipmap/icono_app" />
+        android:contentDescription="TODO" android:src="@mipmap/icono_app" />
 
 
     <LinearLayout
