--- a/app/src/main/res/layout/toast_layout.xml
+++ b/app/src/main/res/layout/toast_layout.xml
@@ -12,7 +12,7 @@
         android:id="@+id/imgIcono"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@mipmap/info" />
+        android:contentDescription="TODO" android:src="@mipmap/info" />
 
     <TextView
         android:id="@+id/txtMensaje"
