--- a/app/src/main/res/layout/fragment_contactar.xml
+++ b/app/src/main/res/layout/fragment_contactar.xml
@@ -12,7 +12,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:clickable="true"
-        android:src="@drawable/ic_menu_send"
+        android:focusable="true" android:src="@drawable/ic_menu_send"
         android:id="@+id/fab"
         android:tint="@android:color/white"
         android:layout_alignParentBottom="true"
@@ -27,7 +27,7 @@
         android:layout_alignParentStart="true">
 
         <EditText
-            android:layout_width="match_parent"
+            android:layout_width="match_parent" android:inputType="" 
             android:layout_height="wrap_content"
             android:hint="Input"
             android:id="@+id/input"
