--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -6,6 +6,7 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
+    <!-- barra de herramientas de la cabecera de la  actividad -->
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -20,8 +21,9 @@
 
     </android.support.design.widget.AppBarLayout>
 
+    <!-- tag include para cargar los distintos fragment -->
     <include
         android:id="@+id/contenido"
-        layout="@layout/content_main2" />
+        layout="@layout/content_main" />
 
 </android.support.design.widget.CoordinatorLayout>
