--- a/app/src/main/res/layout/fragment_contactar.xml
+++ b/app/src/main/res/layout/fragment_contactar.xml
@@ -8,6 +8,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin">
 
+    <!-- boton para enviar los mensaje-->
     <android.support.design.widget.FloatingActionButton
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -19,6 +20,7 @@
         android:layout_alignParentEnd="true"
         app:fabSize="mini" />
 
+    <!-- entrada para escribir los mensajes -->
     <android.support.design.widget.TextInputLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -34,6 +36,7 @@
             />
     </android.support.design.widget.TextInputLayout>
 
+    <!-- lista para visualizar los mensajes escritos -->
     <ListView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
