--- a/app/src/main/res/anim/animacion_imagen.xml
+++ b/app/src/main/res/anim/animacion_imagen.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <set xmlns:android="http://schemas.android.com/apk/res/android">
 
+    <!-- aumento de la escala -->
     <scale
         android:duration="2000"
         android:fromYScale="1.0"
@@ -11,6 +12,7 @@
         android:toXScale="2.0"
         />
 
+    <!-- rotacion -->
     <rotate
         android:duration="3000"
         android:fromDegrees="0"
