--- a/app/src/main/res/anim/animacion_titulo.xml
+++ b/app/src/main/res/anim/animacion_titulo.xml
@@ -1,14 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <set xmlns:android="http://schemas.android.com/apk/res/android">
+
+    <!-- movimiento -->
     <translate
         android:duration="3000"
         android:fromXDelta="-1500"
         />
-    <!--<translate-->
-        <!--android:duration="4000"-->
-        <!--android:fromXDelta="400"-->
-        <!--android:startOffset="2000"-->
-        <!--/>-->
+
+    <!-- transparencia -->
     <alpha
         android:startOffset="3000"
         android:duration="3000"
