--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -6,8 +6,9 @@
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context=".MainActivity"
-    tools:showIn="@layout/app_bar_main2">
+    tools:showIn="@layout/app_bar_main">
 
+    <!-- FrameLayout para cagar los distintos fragment-->
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent" android:id="@+id/content_frame"/>
