--- a/app/src/main/res/layout/fragment_descargas.xml
+++ b/app/src/main/res/layout/fragment_descargas.xml
@@ -5,6 +5,7 @@
     android:layout_height="match_parent"
     tools:context=".descarga.FragmentDescargas">
 
+    <!-- Titulo del fragment de descargas -->
     <TextView
         android:id="@+id/titulo_descargas"
         android:layout_width="match_parent"
@@ -15,6 +16,7 @@
         android:textColor="@android:color/black"
         android:textSize="40sp" />
 
+    <!-- Decripcion del fragment de descargas -->
     <TextView
         android:id="@+id/descripcion_descargas"
         android:layout_width="match_parent"
@@ -26,6 +28,7 @@
         android:textColor="@android:color/black"
         android:textSize="20sp" />
 
+    <!-- Imagen del fragment de descargas -->
     <ImageView
         android:id="@+id/imagen_descargas"
         android:layout_width="match_parent"
@@ -35,26 +38,5 @@
         android:layout_marginTop="50dp"
         android:contentDescription="@string/icono"
         android:src="@drawable/juego_online" />
-
-    <!--<TextView-->
-        <!--android:id="@+id/titulo_juego_online"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:layout_marginTop="20sp"-->
-        <!--android:text="@string/juegao_online_string"-->
-        <!--android:layout_below="@id/imagen_descargas"-->
-        <!--android:textAlignment="center"-->
-        <!--android:textColor="@android:color/black"-->
-        <!--android:textSize="40sp" />-->
-
-    <!--<ImageView-->
-        <!--android:id="@+id/imagen_juego_online"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="112dp"-->
-        <!--android:layout_below="@id/titulo_juego_online"-->
-        <!--android:layout_centerHorizontal="true"-->
-        <!--android:layout_marginTop="50dp"-->
-        <!--android:contentDescription="@string/icono"-->
-        <!--android:src="@mipmap/icono_app" />-->
 
 </RelativeLayout>
