--- a/app/src/main/res/layout/fragment_eventos.xml
+++ b/app/src/main/res/layout/fragment_eventos.xml
@@ -8,31 +8,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingBottom="@dimen/activity_vertical_margin">
 
-    <!--<android.support.design.widget.FloatingActionButton-->
-        <!--android:id="@+id/fab_eventos"-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:layout_alignParentEnd="true"-->
-        <!--android:layout_alignParentBottom="true"-->
-        <!--android:clickable="true"-->
-        <!--android:src="@drawable/ic_menu_send"-->
-        <!--android:tint="@android:color/white"-->
-        <!--app:fabSize="mini" />-->
-
-    <!--<android.support.design.widget.TextInputLayout-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:layout_alignParentStart="true"-->
-        <!--android:layout_alignParentBottom="true"-->
-        <!--android:layout_toLeftOf="@id/fab_eventos">-->
-
-        <!--<EditText-->
-            <!--android:id="@+id/input_eventos"-->
-            <!--android:layout_width="match_parent"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:hint="Input" />-->
-    <!--</android.support.design.widget.TextInputLayout>-->
-
+    <!-- lista de los eventos -->
     <ListView
         android:id="@+id/list_of_eventos"
         android:layout_width="match_parent"
