--- a/app/src/main/res/layout/message.xml
+++ b/app/src/main/res/layout/message.xml
@@ -2,6 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent" android:layout_height="match_parent">
 
+    <!-- mensaje del foro -->
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -10,6 +11,7 @@
         android:id="@+id/message_user"
         android:textStyle="normal|bold" />
 
+    <!-- fecha del mensaje del foro -->
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -17,6 +19,7 @@
         android:layout_alignParentEnd="true"
         android:id="@+id/message_time" />
 
+    <!-- usuario del mensaje del foro -->
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
