--- a/app/src/main/res/layout/noticias.xml
+++ b/app/src/main/res/layout/noticias.xml
@@ -4,6 +4,7 @@
     android:layout_height="match_parent"
     >
 
+    <!-- Imagen de las distintas noticias -->
     <ImageView
         android:id="@+id/imagen_noticia"
         android:layout_width="match_parent"
@@ -14,6 +15,7 @@
         android:contentDescription="@string/icono"
         />
 
+    <!-- Titulo de las distintas noticias -->
     <TextView
         android:id="@+id/noticias_titulo"
         android:layout_width="wrap_content"
@@ -23,20 +25,7 @@
         android:textSize="28sp"
         android:textStyle="normal|bold" />
 
-    <!--<TextView-->
-    <!--android:layout_width="wrap_content"-->
-    <!--android:layout_height="wrap_content"-->
-    <!--android:layout_below="@+id/noticias_titulo"-->
-    <!--android:layout_alignParentEnd="true"-->
-    <!--android:id="@+id/noticias_time" />-->
-
-    <!--<TextView-->
-    <!--android:layout_width="wrap_content"-->
-    <!--android:layout_height="wrap_content"-->
-    <!--android:layout_below="@+id/noticias_time"-->
-    <!--android:layout_alignParentEnd="true"-->
-    <!--android:id="@+id/noticias_url" />-->
-
+    <!-- Contenido de las distintas noticias -->
     <TextView
         android:id="@+id/noticias_contenido"
         android:layout_width="wrap_content"
