--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -3,32 +3,24 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:showIn="navigation_view">
 
+    <!-- opciones del navegador -->
     <group android:checkableBehavior="single">
         <item
             android:id="@+id/nav_eventos"
             android:icon="@drawable/ic_menu_camera"
-            android:title="Eventos" />
+            android:title="@string/eventos" />
         <item
             android:id="@+id/nav_noticias"
             android:icon="@drawable/ic_menu_gallery"
-            android:title="Noticias" />
+            android:title="@string/noticias" />
         <item
             android:id="@+id/nav_descargas"
             android:icon="@drawable/ic_menu_slideshow"
-            android:title="Descargas" />
+            android:title="@string/descargas" />
         <item
-            android:id="@+id/nav_contactar"
+            android:id="@+id/nav_foro"
             android:icon="@drawable/ic_menu_send"
-            android:title="Foro" />
+            android:title="@string/foro" />
     </group>
-
-    <!--<item android:title="">-->
-        <!--<menu>-->
-            <!--<item-->
-                <!--android:id="@+id/nav_desconectar"-->
-                <!--android:icon="@drawable/ic_menu_share"-->
-                <!--android:title="Desconectar" />-->
-        <!--</menu>-->
-    <!--</item>-->
 
 </menu>
