--- a/app/src/main/res/layout/eventos.xml
+++ b/app/src/main/res/layout/eventos.xml
@@ -16,7 +16,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/eventos_titulo"
+        android:layout_below="@id/eventos_titulo"
         android:id="@+id/eventos_contenido"
         android:textSize="18sp" />
 
@@ -24,7 +24,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/eventos_contenido"
+        android:layout_below="@id/eventos_contenido"
         android:layout_alignParentStart="true"
         android:layout_marginTop="5dp"
         android:id="@+id/eventos_time"
@@ -35,7 +35,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/eventos_time"
+        android:layout_below="@id/eventos_time"
         android:id="@+id/eventos_lugar"
         android:textSize="18sp" />
 
