--- a/app/src/main/res/layout/noticias.xml
+++ b/app/src/main/res/layout/noticias.xml
@@ -30,7 +30,7 @@
         android:id="@+id/noticias_contenido"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/noticias_titulo"
+        android:layout_below="@id/noticias_titulo"
         android:layout_alignParentStart="true"
         android:layout_marginTop="5dp"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"
