--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -11,13 +11,13 @@
         android:layout_height="match_parent"
         android:background="@drawable/gradiente" />
 
-    <!-- titulo del splash -->
+    <!-- título del splash -->
     <TextView
         android:id="@+id/titulo_splash"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="40sp"
-        android:text="@string/mis_tareas"
+        android:text="@string/app_name"
         android:textAlignment="center"
         android:textColor="@android:color/white"
         android:textSize="60sp" />
@@ -26,7 +26,7 @@
     <ImageView
         android:id="@+id/imagen_splash"
         android:layout_width="match_parent"
-        android:layout_height="112dp"
+        android:layout_height="224dp"
         android:layout_below="@id/titulo_splash"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="150dp"
