--- a/app/src/main/res/layout/fragment_contactar.xml
+++ b/app/src/main/res/layout/fragment_contactar.xml
@@ -8,7 +8,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin">
 
-    <!-- boton para enviar los mensaje-->
+    <!-- botón para enviar los mensaje-->
     <android.support.design.widget.FloatingActionButton
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
