--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -12,7 +12,7 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:theme="@style/ThemeOverlay.AppCompat.Dark">
 
-    <!-- cabecera de la navegacion-->
+    <!-- cabecera de la navegación-->
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
